# pyproject-tag-check

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
pyproject_tag_check/: __init__.py
